--- a/reasonapps-recruitment-task/styles/Home.module.css
+++ b/reasonapps-recruitment-task/styles/Home.module.css
@@ -12,6 +12,16 @@
   align-items: center;
 }
 
+.main_content {
+  min-height: 90vh;
+  padding: 10rem 0 0 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -29,7 +39,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #40a9ff;
   text-decoration: none;
 }
 
@@ -83,13 +93,22 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  transition: 0.2s all ease;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #40a9ff;
+  border-color: #40a9ff;
+}
+
+.link_card {
+  padding: 1.5rem;
+}
+
+.link_card:hover {
+  color: #40a9ff;
 }
 
 .card h2 {
