--- a/reasonapps-recruitment-task/styles/globals.css
+++ b/reasonapps-recruitment-task/styles/globals.css
@@ -1,9 +1,12 @@
+@import "~antd/dist/antd.css";
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
 }
 
 a {
@@ -21,6 +24,6 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: #0f0f0f;
   }
 }
