--- a/reasonapps-recruitment-task/styles/globals.css
+++ b/reasonapps-recruitment-task/styles/globals.css
@@ -23,7 +23,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: #0f0f0f;
+    color: #0f0f0f;
+    background: white;
   }
 }
