--- a/reasonapps-recruitment-task/styles/Home.module.css
+++ b/reasonapps-recruitment-task/styles/Home.module.css
@@ -14,7 +14,7 @@
 
 .main_content {
   min-height: 90vh;
-  padding: 10rem 0 0 0;
+  padding-top: 10rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -131,6 +131,10 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+
+  .main_content {
+    padding-top: 0;
   }
 }
 
